--- a/index.jade
+++ b/index.jade
@@ -57,4 +57,4 @@ html
 						source(src="audio/GoodStarts.mp3" type="audio/mp3")
 				div Invisible - Designed by <a href="sources.zip">Rozaxe</a>
 
-		script(src="js/min/app.min.js")
+		script(src="js/app.js")
