--- a/style.styl
+++ b/style.styl
@@ -66,6 +66,7 @@ body
 
 
 #help
+	height 94%
 	background-color rgba(0, 0, 0, 0.3)
 	z-index 35
 	text-align center
@@ -177,6 +178,7 @@ body
 				border-bottom-left-radius 0.5em
 
 			input[type=submit]
+				cursor pointer
 				width 20%
 				border-top-right-radius 0.5em
 				border-bottom-right-radius 0.5em
