--- a/index.jade
+++ b/index.jade
@@ -55,6 +55,6 @@ html
 					img#player(src="img/play.png")
 					audio#music(preload autoplay loop)
 						source(src="audio/GoodStarts.mp3" type="audio/mp3")
-				div Invisible - Designed by <a href="sources.zip">Rozaxe</a>
+				div Invisible - Designed by <a href="//github.com/Rozaxe/Invisible">Rozaxe</a>
 
 		script(src="js/app.js")
